# CAN_AWS_Gateway

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Credentials/: Add wifi credentials template  CMakeLists.txt  aws_credentials.h  wifi_credentials.h
app/: CMakeLists.txt  application.cpp  application.h  main.cpp
common_config/: bsp_config.h  rtos_config.h
modules/aws/: CMakeLists.txt  aws_iot.c  aws_iot.h
modules/bsp/mcp2515/: mcp2515.h  mcp2515_types.h
modules/bsp/spi/: CMakeLists.txt  spi.h
modules/can/: CMakeLists.txt  can.c  can.h
modules/can/mcp2515/: CMakeLists.txt  mcp2515.c  mcp2515.h
modules/can/spi/: CMakeLists.txt  spi.c
modules/can_bus/: CMakeLists.txt  can_bus.c  can_bus.h
modules/client_mqtt/: CMakeLists.txt  client_mqtt.cpp  client_mqtt.h
modules/wifi/: CMakeLists.txt  wifi.c  wifi.h
